[FIX] remove media query text align left

--- a/EX2-repsonsive-wannabe-starter/css/style.css
+++ b/EX2-repsonsive-wannabe-starter/css/style.css
@@ -138,9 +138,7 @@ img {
 
 
  @media screen and (max-width: 480px) {
-    .text-center{
-       text-align: left;
-    }
+
 
     .why-us{
         background-color: black;
@@ -148,5 +146,9 @@ img {
 
    .row{
     flex-direction: column;
+
    }
+
+
+  
 }
